fixed overlapping css definitions for search/profile pages

--- a/frontend/src/pages/ProfilePage.css
+++ b/frontend/src/pages/ProfilePage.css
@@ -71,10 +71,21 @@ transition:
     margin: 0 auto;
 }
 
+.bio-text {
+    width: 90%;
+    margin-top : 0px;
+    word-break: break-all;
+    white-space: normal;
+    font-family: monospace;
+}
+
 p {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-family: sans-serif;
     color: #FFFFFF;
 }
 
